[package]
name = "mping"
version = "0.1.8"
authors = ["Mikko Tanner <mikko.tanner@gmail.com>"]
description = "Multi-pinger utility written in Rust"
readme = "README.md"
repository = "https://github.com/Ukko-Ylijumala/mping-rs"
license = "MIT OR Apache-2.0"
categories = ["network-programming"]
keywords = ["icmp", "ping", "networking", "ncurses", "async"]
publish = false
edition = "2024"

[dependencies]
surge-ping = "0.8.3"
ncurses = "5.101"
ctrlc = "3.5"
rand = "0.9"
futures = "0.3"
regex = "1.12"
lazy_static = "1.5"
#tracing = "0.1"

[dependencies.tokio]
version = "1.48"
features = ["full"]

[dependencies.clap]
version = "4.5"
features = ["cargo", "derive"]
